--- a/search/templates/search/search.html
+++ b/search/templates/search/search.html
@@ -5,6 +5,7 @@
 	<style type="text/css">
 		#inputzone{display:inline-block;}
 		#submitzone{display:inline-block; }
+		p{text-indent: 10px;}
 	</style>
 </head>
 <body>
@@ -23,6 +24,20 @@
 				<input type='submit' value='送出'/>
 			</div>
 		</form>
+	</div>
+	<br/><br/>
+	<div id='introducezone'>
+		<h3>說明：</h3>
+		<p style='text-indent:1em'>輸入想搜尋的關鍵字，按下送出，查詢選課志願序的回報資料 ！</p>	
+		<p>（如果沒有特定的關鍵字，可以留白）</p>	
+		<br/><br/>
+		<h3>回報資料來源：</h3>
+		<ul>
+			<li><a href='https://www.dcard.tw/f/nccu/p/231948489'>1081一階選課志願序回報 - 政治大學板 | Dcard</a></li>
+			<li><a href='https://www.dcard.tw/f/nccu/p/231970773'>1081二階選課志願序回報 - 政治大學板 | Dcard</a></li>
+			<li><a href='https://www.dcard.tw/f/nccu/p/232899690'>1082一階選課志願序回報 - 政治大學板 | Dcard</a></li>
+			<li><a href='https://www.dcard.tw/f/nccu/p/233026787'>1082二階選課志願序回報 - 政治大學板 | Dcard</a></li>
+		</ul>
 	</div>
 </body>
 </html>
